gearset/main/default/objects/mutliupsert__c/mutliupsert__c.object-meta.xml
<CustomObject>
    <label>mutliupsert</label>
    <nameField>
        <label>mutliupsert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>multiupsert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>