gearset/main/default/objects/mutliupsert__c/fields/first__c.field-meta.xml
<CustomField>
    <fullName>first__c</fullName>
    <externalId>true</externalId>
    <label>first</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>