gearset/main/default/objects/mutliupsert__c/fields/second__c.field-meta.xml
<CustomField>
    <fullName>second__c</fullName>
    <externalId>true</externalId>
    <label>second</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>