gearset/main/default/objects/mutliupsert__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>